tests/snapshots/repl_tests__tests__bash_panel_finished_shows_ctrl_b_hint.snap
---
source: tests/repl_tests.rs
assertion_line: 1601
expression: "lines.join(\"\\n\")"
---
┌ + make build · exit 0 · ran 00:42 · Ctrl+B to hide ──────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│Compiling peakbot                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
