tests/snapshots/repl_tests__tests__bash_panel_finished_success.snap
---
source: tests/repl_tests.rs
assertion_line: 1436
expression: "lines.join(\"\\n\")"
---
┌ + make build · exit 0 · ran 00:42 ───────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│Compiling peakbot v0.5.2                                                      │
│Finished `dev` profile [unoptimized + debuginfo]                              │
└──────────────────────────────────────────────────────────────────────────────┘
