tests/snapshots/repl_tests__tests__bash_panel_idle_opened_by_user_renders_empty_frame.snap
---
source: tests/repl_tests.rs
assertion_line: 1681
expression: "lines.join(\"\\n\")"
---
┌ $ no bash output yet · Ctrl+B to hide ───────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
