tests/snapshots/repl_tests__tests__bash_panel_running_long_line_clips_at_right_edge.snap
---
source: tests/repl_tests.rs
assertion_line: 1572
expression: sanitised
---
┌ > cat huge.log · pid 9999 · MM:SS ───────────────────────────────────────┐
│                                                                              │
│                                                                              │
│before the long line                                                          │
│XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX│
│after the long line                                                           │
│stdin>  · [Ctrl+S]                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
