tests/snapshots/repl_tests__tests__bash_panel_running_overflow_keeps_last_5_lines.snap
---
source: tests/repl_tests.rs
assertion_line: 1411
expression: sanitised
---
┌ > yes | head · pid 100 · MM:SS · Ctrl+B to hide ─────────────────────────┐
│line 5                                                                        │
│line 6                                                                        │
│line 7                                                                        │
│line 8                                                                        │
│line 9                                                                        │
│stdin>  · [Ctrl+S]                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
