tests/snapshots/repl_tests__tests__bash_panel_running_short_tail.snap
---
source: tests/repl_tests.rs
assertion_line: 1382
expression: sanitised
---
┌ > psql -f migrate.sql · pid 4821 · MM:SS ────────────────────────────────┐
│                                                                              │
│                                                                              │
│NOTICE: table "users" does not exist, skipping                                │
│CREATE TABLE                                                                  │
│CREATE INDEX                                                                  │
│stdin> _                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
