tests/snapshots/repl_tests__tests__bash_panel_running_shows_ctrl_b_hint.snap
---
source: tests/repl_tests.rs
assertion_line: 1631
expression: sanitised
---
┌ > yes | head -n 20 · pid 4242 · MM:SS · Ctrl+B to hide ──────────────────┐
│                                                                              │
│                                                                              │
│y                                                                             │
│y                                                                             │
│y                                                                             │
│stdin>  · [Ctrl+S]                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
