tests/snapshots/repl_tests__tests__bash_panel_running_stdin_focused_with_buffer_and_cursor.snap
---
source: tests/repl_tests.rs
assertion_line: 1524
expression: sanitised
---
┌ > sudo apt update · pid 4242 · MM:SS ────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│[sudo] password for user:                                                     │
│stdin> hunter2█                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
