tests/snapshots/repl_tests__tests__bash_panel_running_stdin_unfocused_shows_hint.snap
---
source: tests/repl_tests.rs
assertion_line: 1489
expression: sanitised
---
┌ > sudo apt update · pid 4242 · MM:SS ────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│[sudo] password for user:                                                     │
│stdin>  · [Ctrl+S]                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
