tests/snapshots/repl_tests__tests__chat_long_messages_scroll.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ──────────────────────────────────────────┐▲
│[12:00:00] 👤  User: This is a very long message that     │█
│should wrap to multiple lines when displayed in the      │█
│terminal. It contains lots of text that will need to be  │█
│wrapped.                                                 │║
│[12:00:01] 🤖  Agent: Here is another lengthy response    │║
│that will definitely require multiple lines to display   │║
│properly. It has detailed explanations and lots of       │║
└ · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
