tests/snapshots/repl_tests__tests__chat_mixed_roles_scroll.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Chat Messages ────────────────────────────────────────────────────┐▲
│[12:00:00] 👤  User: Hello, how are you?                            │█
│[12:00:01] 🤖  Agent: I'm doing well, thank you!                    │█
│[12:00:02] 👤  User: Can you help me with coding?                   │█
│[12:00:03] 🔧  Tool: bash("ls -la")                                 │█
│[12:00:04] 📋  Result: file1.txt file2.txt                          │█
│[12:00:05] 🤖  Agent: I found some files in the directory.          │█
│                                                                   │║
│                                                                   │║
│                                                                   │║
└rl+T tasks · Ctrl+B bash · F4 select · Ctrl+G multi · Ctrl+P pause ┘▼
